--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">GlazovNetApp</string>
+    <string name="app_name">Glazov.NET</string>
+
+    <string name="api_response_server_error">Server error.\nResponse message: </string>
+    <string name="api_response_error">Request error.\nError code: </string>
+    <string name="api_response_unknown_error">Unknown error</string>
+    <string name="api_response_server_not_available">Server not available</string>
 </resources>
