--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,5 +13,5 @@
     <string name="login_screen_login_as_user_button">Войти</string>
     <string name="login_screen_login_as_admin_button">Войти как администратор</string>
     <string name="login_screen_fields_are_empty_error">Введите ваши логин и пароль</string>
-    <string name="login_response_user_not_found">Пользователь не найден. Проверьте правильность введенных данных</string>
+    <string name="login_response_user_not_found">Пользователь не найден. Проверьте правильность введенных данных.</string>
 </resources>
