--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="login_screen_login_as_user_button">Login</string>
     <string name="login_screen_login_as_admin_button">Login as administrator</string>
     <string name="login_screen_fields_are_empty_error">Enter your login and password</string>
-    <string name="login_response_user_not_found">User not found. Check if the data entered is correct</string>
+    <string name="login_response_user_not_found">User not found. Check if the data entered is correct.</string>
 </resources>
