--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,16 +2,25 @@
 <resources>
     <string name="app_name">Глазов.NET</string>
 
+    <!-- API RESPONSES -->
     <string name="api_response_server_error">Ошибка на сервере. Сообщение: </string>
     <string name="api_response_error">"Ошибка запроса. Код ошибки: "</string>
     <string name="api_response_unknown_error">Неизвестная ошибка.</string>
     <string name="api_response_server_not_available">Сервер не доступен</string>
 
+    <!-- LOGIN SCREEN -->
     <string name="login_screen_username_text">Имя пользователя</string>
     <string name="login_screen_password_text">Пароль</string>
-    <string name="remember_user_text">Запомнить меня</string>
+    <string name="login_remember_user_text">Запомнить меня</string>
     <string name="login_screen_login_as_user_button">Войти</string>
     <string name="login_screen_login_as_admin_button">Войти как администратор</string>
     <string name="login_screen_fields_are_empty_error">Введите ваши логин и пароль</string>
     <string name="login_response_user_not_found">Пользователь не найден. Проверьте правильность введенных данных.</string>
+
+    <!-- UTILITIES -->
+    <string name="util_date_time_converter_today">Сегодня в</string>
+    <string name="util_date_time_converter_yesterday">Вчера в </string>
+
+    <!-- REUSABLE -->
+    <string name="reusable_text_loading">Загрузка…</string>
 </resources>
