added bottom actions buttons. Moved input data variables to viewModel. Added uploading post functions and translations

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,4 +32,5 @@
     <!-- REUSABLE -->
     <string name="reusable_text_loading">Загрузка…</string>
     <string name="reusable_text_clear">Очистить</string>
+    <string name="reusable_text_save">Сохранить</string>
 </resources>
