--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <!-- REUSABLE -->
     <string name="reusable_text_loading">Loading…</string>
     <string name="reusable_text_clear">Clear</string>
+    <string name="reusable_text_save">Save</string>
 
 </resources>
