--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,14 @@
     <string name="login_screen_fields_are_empty_error">Enter your login and password</string>
     <string name="login_response_user_not_found">User not found. Check if the data entered is correct.</string>
 
+    <!-- POSTS LIST SCREEN -->
+    <string name="posts_list_screen_name">News</string>
+
     <!-- EDIT POSTS SCREEN -->
+    <string name="add_post_screen_name">Create post</string>
+    <string name="edit_post_screen_name">Edit post</string>
+    <string name="edit_post_post_title_placeholder">Post title</string>
+    <string name="esit_post_post_text_placeholder">Post text</string>
     <string name="edit_post_add_result_success">The post was successfully uploaded.</string>
     <string name="edit_post_edit_result_success">The post has been successfully updated.</string>
     <string name="edit_post_result_image_failed">Failed to load the picture. The post was not uploaded.</string>
