--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,6 +30,16 @@
     <string name="edit_post_edit_result_success">Пост был успешно обновлен.</string>
     <string name="edit_post_result_image_failed">Не удалось загрузить картинку. Пост не был загружен.</string>
 
+    <!-- REQUESTS SCREEN -->
+    <string name="request_screen_tab_active_text">Открытые</string>
+    <string name="request_screen_tab_solved_text">Решенные</string>
+    <string name="request_screen_request_status_not_reviewed_text">Не рассмотрен</string>
+    <string name="request_screen_request_status_in_progress_text">Решается</string>
+    <string name="request_screen_request_status_solved_text">Закрыт</string>
+
+    <!-- CHAT BUBBLE -->
+    <string name="chat_bubble_screen_sender_name_self">Вы</string>
+
     <!-- UTILITIES -->
     <string name="util_date_time_converter_today">Сегодня в</string>
     <string name="util_date_time_converter_yesterday">Вчера в </string>
