added lottie dependencies. Created an RequestErrorScreen with translated strings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,6 +61,10 @@
 
     <!-- COMPONENTS -->
     <string name="comp_image_picker_label">Выбрать изображение</string>
+    <string name="request_error_title_text">Ууууупс…</string>
+    <string name="request_error_description_text">Извините, мы не можем отобразить этот контент из-за непредвиденной ошибки…</string>
+    <string name="request_error_main_message_intro">Описание ошибки</string>
+    <string name="request_error_additional_message_intro">Дополнительная информация</string>
 
     <!-- REUSABLE -->
     <string name="reusable_text_loading">Загрузка…</string>
