--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -56,6 +56,19 @@
     <string name="request_details_screen_mark_as_solved_text">Закрыть запрос</string>
     <string name="request_details_screen_assign_text">Позаботиться об этом</string>
 
+    <!-- CREATE REQUEST SCREEN -->
+    <string name="create_request_screen_name">Создать запрос</string>
+    <string name="create_request_message_fields_are_empty">Пожалуйста, заполните все поля</string>
+    <string name="create_request_response_created">Запрос создан</string>
+    <string name="create_request_response_error">Невозможно создать запрос. Попробуйте позже</string>
+    <string name="create_request_screen_request_title_title">Тема</string>
+    <string name="create_request_screen_request_description_title">Описание</string>
+    <string name="create_request_screen_request_notifications_title">Уведомления</string>
+    <string name="create_request_screen_request_title_placeholder">Введите тему запроса</string>
+    <string name="create_request_screen_request_description_placeholder">Опишите вашу проблему</string>
+    <string name="create_request_screen_request_notifications_checkbox_placeholder">Получать уведомления о новых сообщениях в чате</string>
+    <string name="create_request_screen_save_request_button_text">Создать запрос</string>
+
     <!-- REQUESTS CHAT -->
     <string name="request_chat_screen_name">Чат</string>
     <string name="request_chat_message_placeholder_text">Сообщение</string>
