--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,19 @@
     <string name="request_details_screen_mark_as_solved_text">Mark as solved</string>
     <string name="request_details_screen_assign_text">Take care of that</string>
 
+    <!-- CREATE REQUEST SCREEN -->
+    <string name="create_request_screen_name">Create request</string>
+    <string name="create_request_message_fields_are_empty">Please fill in all fields</string>
+    <string name="create_request_response_created">Request created successfully</string>
+    <string name="create_request_response_error">Unable to create new request. Try again later</string>
+    <string name="create_request_screen_request_title_title">Title</string>
+    <string name="create_request_screen_request_description_title">Description</string>
+    <string name="create_request_screen_request_notifications_title">Notifications</string>
+    <string name="create_request_screen_request_title_placeholder">Enter a title</string>
+    <string name="create_request_screen_request_description_placeholder">Describe your problem</string>
+    <string name="create_request_screen_request_notifications_checkbox_placeholder">Receive notifications about new messages in the chat</string>
+    <string name="create_request_screen_save_request_button_text">Create request</string>
+
     <!-- REQUESTS CHAT -->
     <string name="request_chat_screen_name">Chat</string>
     <string name="request_chat_message_placeholder_text">Message</string>
