--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,11 @@
     <!-- EDIT POSTS SCREEN -->
     <string name="add_post_screen_name">Create post</string>
     <string name="edit_post_screen_name">Edit post</string>
-    <string name="edit_post_post_title_placeholder">Post title</string>
-    <string name="edit_post_post_text_placeholder">Post text</string>
+    <string name="edit_post_post_title_title">Title</string>
+    <string name="edit_post_post_text_title">Content</string>
+    <string name="edit_post_post_image_title">Image</string>
+    <string name="edit_post_post_title_placeholder">Enter a post title</string>
+    <string name="edit_post_post_text_placeholder">Enter the text of the post</string>
     <string name="edit_post_add_result_success">The post was successfully uploaded.</string>
     <string name="edit_post_edit_result_success">The post has been successfully updated.</string>
     <string name="edit_post_result_image_failed">Failed to load the picture. The post was not uploaded.</string>
