added bottomSheet for tariff details (WIP)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -77,6 +77,7 @@
 
     <!-- TARIFFS SCREEN -->
     <string name="tariffs_list_screen_name">Тарифы</string>
+    <string name="tariffs_list_loading_failed_text">Не удалось загрузить</string>
 
     <!-- REQUESTS CHAT -->
     <string name="request_chat_screen_name">Чат</string>
